--- a/roles/bot/tasks/main.yml
+++ b/roles/bot/tasks/main.yml
@@ -51,5 +51,5 @@
 - name: Add systemd config
   template: src=telegram_bot_systemd.j2 dest=/etc/systemd/system/telegram-monitoring-bot.service 
   notify:
-    - systemd deamon reload 
+    - Restart telegram monitoring bot 
 
